Basic Authentication Added

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source = dating.db"
-  }
+  },
+  "TokenKey" : "Lorem Ipsum is simply dummy text of the printing and typesetting industry."
 }
